assets/css/main.css
/* ... */
						#header > nav > ul > li > a:hover, #header > nav > ul > li > a:active {
							border-radius: 7px;
							color: rgb(237 185 46);
						}

						#header > nav > ul > li > a:before {
							margin-right: 0.5rem;
						}

					#header > nav > ul > li > ul {
						display: none;
					}

					#header > nav > ul > li.active > a {
						color: rgba(237 185 46);
					}

		.dropotron {
			background-color: #edb92e;
			border-radius: 0.5rem;
			list-style-type: none;
			margin: -0.5rem 0 0 1px;
			min-width: 10rem;
			padding: 0.5rem 0;
		}

			.dropotron.level-0 {
				margin-top: 1.125rem;
				margin-left: 0;
			}

			.dropotron.level-1 {
				margin-top: 3rem;
				margin-left: -18em;
			}

			.dropotron.level-2 {
				margin-top: .35rem;
				margin-left: -6em;
			}
			.dropotron.level-3 {
				margin-top: .35rem;
				margin-left: 6.75em;
			}

				.dropotron.level-0:before {
					-moz-transform: rotate(45deg);
					-webkit-transform: rotate(45deg);
					-ms-transform: rotate(45deg);
					transform: rotate(45deg);
					background-color: #edb92e;
					content: '';
					height: 0.75rem;
					position: absolute;
					right: 2rem;
					top: -0.375rem;
					width: 0.75rem;
				}

			.dropotron li {
				border-top: solid 1px rgba(255, 255, 255, 0.25);
				padding: 0;
				position: relative;
			}

				.dropotron li:first-child {
					border-top: none;
				}

				.dropotron li.active > a {
					color: #ffffff;
				}

			.dropotron a {
				border: 0;
				color: rgb(255, 255, 255);
				padding: 0.5rem 1rem;
				text-decoration: none !important;
				font-weight: 500;
				font-size:1.25em;
			}

				.dropotron a:active, .dropotron a:hover, .dropotron a:focus {
					color: #ffffff;
				}

		#header > .navPanelToggle {
			-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, top 0.2s ease-in-out, right 0.2s ease-in-out;
			-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, top 0.2s ease-in-out, right 0.2s ease-in-out;
			-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, top 0.2s ease-in-out, right 0.2s ease-in-out;
			transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, top 0.2s ease-in-out, right 0.2s ease-in-out;
			text-decoration: none;
			color: rgba(0, 0, 0, 0.5);
			display: none;
			height: inherit;
			line-height: inherit;
			outline: 0;
			padding: 0 1.5rem;
			position: absolute;
			right: 0;
			top: 0;
		}

			#header > .navPanelToggle:before {
				-moz-osx-font-smoothing: grayscale;
				-webkit-font-smoothing: antialiased;
				display: inline-block;
				font-style: normal;
				font-variant: normal;
				text-rendering: auto;
				line-height: 1;
				text-transform: none !important;
				font-family: 'Font Awesome 5 Free';
				font-weight: 900;
				font-size: 2em;
			}

			#header > .navPanelToggle:hover {
				color: rgb(237 185 46);
			}

			#header > .navPanelToggle:before {
				content: '\f0c9';
				float: right;
				line-height: inherit;
				margin: 0 0 0 0.625rem;
			}

		#header.reveal {
			-moz-animation: reveal-header 0.5s ease;
			-webkit-animation: reveal-header 0.5s ease;
			-ms-animation: reveal-header 0.5s ease;
			animation: reveal-header 0.5s ease;
		}

		#header.alt {
			-moz-animation: none;
			-webkit-animation: none;
			-ms-animation: none;
			animation: none;
			background: none;
			box-shadow: none;
			height: 6rem;
			line-height: 6rem;
			position: absolute;
		}

			#header.alt > .logo {
				font-size: 1.5rem;
			}

			.divider{
				font-size:1.25em;
				font-weight: 500;
			}

	@media screen and (max-width: 980px) {

		#header {
			height: 44px;
			line-height: 44px;
			padding: 0 1.25rem;
		}

			#header > .logo {
				font-size: 1rem;
			}

			#header > nav {
				display: none;
			}

			#header > .navPanelToggle {
				display: block;
			}

				#header > .navPanelToggle span {
					display: none;
				}

				#logo {
					width:6em;
					
					}

	}

	@media screen and (max-width: 480px) {

		#header {
			min-width: 320px;
		}

	}

/* Nav Panel */

	#wrapper {
		-moz-transition: opacity 0.5s ease;
		-webkit-transition: opacity 0.5s ease;
		-ms-transition: opacity 0.5s ease;
		transition: opacity 0.5s ease;
	}

	#navPanel {
		-moz-transform: translateX(100%);
		-webkit-transform: translateX(100%);
		-ms-transform: translateX(100%);
		transform: translateX(100%);
		-moz-transition: -moz-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
		-webkit-transition: -webkit-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
		-ms-transition: -ms-transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
		transition: transform 0.5s ease, box-shadow 0.5s ease, visibility 0.5s;
		-webkit-overflow-scrolling: touch;
		background-color: #edb92e;
		box-shadow: none;
		color: rgba(255, 255, 255, 0.5);
		height: 100%;
		max-width: 80%;
		overflow-y: auto;
		position: fixed;
		right: 0;
		top: 0;
		visibility: hidden;
		width: 20em;
		z-index: 10002;
	}

		#navPanel nav {
			padding: 3em 2em;
		}

		#navPanel .link {
			-moz-transition: color 0.2s;
			-webkit-transition: color 0.2s;
			-ms-transition: color 0.2s;
			transition: color 0.2s;
			border-bottom: 0;
			border-top: solid 1px rgba(255, 255, 255, 0.25);
			color: rgba(255, 255, 255, 0.5);
			display: block;
			padding: 0.75em 0;
			text-decoration: none;
		}

			#navPanel .link:first-child {
				border-top: 0;
			}

			#navPanel .link.depth-0 {
				color: #ffffff;
				font-weight: 700;
			}

			#navPanel .link:active, #navPanel .link:focus, #navPanel .link:hover {
				color: #ffffff !important;
			}

			#navPanel .link .indent-1 {
				display: inline-block;
				width: 1.25em;
			}

			#navPanel .link .indent-2 {
				display: inline-block;
				width: 2.5em;
			}
/* ... */

